<resources>
    <string name="app_name">Ứng dụng đặt vé xem phim</string>
    <string name="full_name">Họ và tên</string>
    <string name="gender">Giới tính</string>
    <string name="email">Email</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="history">Lịch sử đặt vé</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng ký</string>
    <string name="haveAccount">Đã có tài khoản?</string>
    <string name="noAccount">Không có tài khoản?</string>
    <string name="isAdmin">Quản lý</string>
    <string name="isUser">Người dùng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="statistic">Thống kê vé đã đặt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>