<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/white"
    tools:context=".activities.AddUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Thêm người dùng"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="24dp"/>

        <!--==================Full name========================-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtAddName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="32sp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/editAddUserFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaabold"
                android:hint="@string/full_name"
                android:textColor="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--==================Gender========================-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/genderTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="16sp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/editAddUserGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaabold"
                android:hint="@string/gender"
                android:textColor="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--==================Email========================-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="16sp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/editAddUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaabold"
                android:hint="@string/email"
                android:textColor="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--==================Phone number========================-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="16sp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/editAddUserPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaabold"
                android:hint="@string/phone_number"
                android:textColor="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--==================Password========================-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="16sp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/editAddUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaabold"
                android:hint="@string/password"
                android:textColor="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnConfirmAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/comfortaabold"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="16sp"
            android:text="Thêm"/>

    </LinearLayout>
</ScrollView>